# multi-fleet-managment

./: .dockerignore  .env.example  .gitignore  ACTIVE_ORGANIZATION_FIX.md  AGENTS.md  CLIENT_TESTS_MODAL_FIX.md  DRIVER_ONLY_UI_IMPLEMENTATION.md  DRIVER_PORTAL_SUMMARY.md  Dockerfile.client  Dockerfile.fastapi  Dockerfile.server  EMPLOYEE_PORTAL_IMPLEMENTATION.md  ETHIOPIAN_NAMES_IMPLEMENTATION.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_SUPERADMIN_IMPLEMENTATION.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MAPBOX_LOCATION_FIX.md  MOBILE_DASHBOARD_CHECKLIST.md  MOBILE_DASHBOARD_FIX.md  MOBILE_DASHBOARD_SUMMARY.md  MOBILE_DASHBOARD_UI_FIXES.md  MOBILE_NOTIFICATIONS_IMPROVEMENTS.md  MOBILE_ROUTE_DETAILS.md  MODAL_FIX_FINAL.md  MODAL_PORTAL_FIX.md  MODAL_REDESIGN_SUMMARY.md  MODAL_RESPONSIVE_TEST.md  NOTIFICATIONS_DISABLED.md.old  NOTIFICATIONS_ENABLED.md  NOTIFICATION_FIXES_SUMMARY.md  NOTIFICATION_IMPLEMENTATION.md  NOTIFICATION_SYSTEM_FIX.md  NOTIFICATION_TESTING.md  ORG_ROLE_FIX_GUIDE.md  PAYROLL_FRONTEND_UPDATE.md  PAYROLL_QUICK_REFERENCE.md  PAYROLL_SYSTEM_COMPLETE.md  Payroll_System_Tests.postman_collection.json  QUICK_FIX_TEST.md  (+30 more)
clustering/: .coverage  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TEST_SUMMARY.md  algo-explanation.txt  demo_map.py  docker-compose.yml  general-structure-explanation.txt  pyproject.toml  pytest.ini  requirements.txt  test_api.py  visualization.html
clustering/src/: assign_routes.py  dependencies.py  main.py
clustering/tests/: test_api.py  test_assign_routes.py  test_dependencies.py  test_integration.py
(+82 files in other folders)
