[project]
name = "clustering"
version = "0.1.0"
description = "A FastAPI application for clustering and route optimization."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "numpy==1.26.3",
    "haversine==2.8.0",
    "ortools",
    "httpx==0.28.1",
    "folium",
    "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
